# MCYSD-18-escape-room

./: .gitignore  README.md  SETUP.md  pyproject.toml  run.txt
.github/workflows/: run_test.yml
data/: README_DATA.md  vault_dump.txt
data/group-02/: README_DATA.md  vault_dump.txt
src/: escape.py  main.py
src/escaperoom/: __init__.py  engine.py  transcript.py  utils.py
src/escaperoom/rooms/: __init__.py  base.py  dns.py  final.py  intro.py  malware.py  soc.py  vault.py
tests/: __init__.py  test_engine.py  test_escape.py  test_main.py  test_rooms.py  test_utils.py
