[project]
name = "mcysd-18-escape-room"
version = "0.1.0"
description = "An escape room project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
addopts = "-v"

[tool.ruff]
line-length = 79
lint.select = [
    "ALL",
]
lint.ignore = [
    "T201", # allow print
    "D203", # conflicting rule
    "D213", # conflicting rule
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # allow assert
    "PLR2004", # allow magic numbers
]
