[project]
name = "mcysd-18-escape-room"
version = "0.1.0"
description = "An escape room project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
addopts = "-v"

[tool.basedpyright]
include = ["src"]
extraPaths = [
    "src",
]
exclude = [
    "**/__pycache__",
    "tests/**",
]
ignore = [
    "*",
]

[tool.ruff]
line-length = 79
lint.select = [
    "ALL",
]
lint.ignore = [
    #"T201", # allow print()
    "PTH123", # allow open()
    "FBT", # allow boolean values in arguments
    "ERA001", # allow commented-out code
    "TD", # less strict TODO
    "FIX002", # allow TODO
    "TRY300", # allow return in try blocks
    "ISC003", # conflicting rule, allow explicit string concatenation
    "D203", # conflicting rule
    "D213", # conflicting rule
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # allow assert
    "PLR2004", # allow magic numbers
]
